maze.wallfollower.WallFollowerMaze.scala.error
Erreur de compilation :
WallFollowerMaze:4: error: ';' expected but ')' found.
                ; left()}; while(!isFacingWall()) {forward()})}
                                                             ^